--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "braces": "^2.3.2",
+    "eslint": "^4.19.1",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "open": "^6.4.0",
     "react": "^16.8.6",
