--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint": "^4.19.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
+    "mime": "^1.4.1",
     "open": "^6.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
