--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-icons": "^3.7.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "webpack-dev-server": "^3.1.11"
   },
   "devDependencies": {},
   "scripts": {
